# knowledge-graph-manufacturing

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: failure_impact_analysis.py
src/graph/: neo4j_connector.py  schema.py
src/reasoning/: failure_propagator.py  path_analyzer.py
tests/: test_failure_propagator.py
