[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-graph-manufacturing"
version = "1.0.0"
description = "Graph AI platform for manufacturing — model complex relationships"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Manufacturing AI Team", email = "team@manufacturing-ai.dev"}
]

dependencies = [
    "neo4j>=5.0.0",
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "langchain>=0.1.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "strawberry-graphql>=0.210.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
